--- a/renovate.json
+++ b/renovate.json
@@ -1,6 +1,11 @@
 {
 	"$schema": "https://docs.renovatebot.com/renovate-schema.json",
-	"extends": [
-		"config:recommended"
+	"extends": ["config:best-practices"],
+	"packageRules": [
+		{
+			"matchPackageNames": ["chinese-days"],
+			"rangeStrategy": "bump",
+			"automerge": true
+		}
 	]
 }
